@@ -512,6 +512,8 @@ enum CharacterDatabaseStatements
     CHAR_INS_CHAR_TALENT,
     CHAR_DEL_CHAR_ACTION_EXCEPT_SPEC,
     CHAR_SEL_CHAR_PET_BY_ENTRY_AND_SLOT,
+    CHAR_GET_EXTERNAL_MAIL,
+    CHAR_DEL_EXTERNAL_MAIL,
 
     MAX_CHARACTERDATABASE_STATEMENTS,
 };
